# ChangeLog for net-libs/netwib
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/netwib/ChangeLog,v 1.10 2004/11/20 04:25:05 weeve Exp $

  19 Nov 2004; Jason Wever <weeve@gentoo.org> netwib-5.9.0.ebuild:
  Stable on sparc.

  12 Jul 2004; Eldad Zack <eldad@gentoo.org> netwib-5.9.0.ebuild:
  marked x86 stable

  21 May 2004; Jason Wever <weeve@gentoo.org> netwib-5.9.0.ebuild:
  Added ~sparc keyword.

  21 Mar 2004; Michael Boman <mboman@gentoo.org> netwib-5.6.0.ebuild,
  netwib-5.9.0.ebuild:
  QA: IUSE variable was missing.

*netwib-5.9.0 (28 Feb 2004)

  28 Feb 2004; Michael Boman <mboman@gentoo.org> metadata.xml,
  netwib-5.9.0.ebuild:
  Bumped to version 5.9.0 (required for bug 42960). Added the software to the
  netmon herd.

  30 Jan 2004; Grant Goodyear <g2boojum@hotmail.com> metadata.xml,
  netwib-5.6.0.ebuild:
  Marking x86 to enable netwox

  05 Jan 2004; Robin H. Johnson <robbat2@gentoo.org> :
  add missing manifest

  26 Dec 2003; Jason Wever <weeve@gentoo.org> netwib-5.6.0.ebuild:
  Contrary to popular belief, this does not currently compile against libnet,
  nor does the appropriate version of libnet have a sparc or ~sparc keyword.

*netwib-5.6.0 (25 Dec 2003)

  25 Dec 2003; Mike Frysinger <vapier@gentoo.org> :
  Cleaned up #35158.