@@ -1,6 +1,18 @@
-MD5 221feb1a42d7df84bafe5c349bb5e33e ChangeLog 1331
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
+MD5 feeace362e935a575eca1f3637c6fabe ChangeLog 1514
 MD5 44374bbb178a0c804d74bb54af07cdc2 metadata.xml 258
-MD5 e04b8398db7cc9d8d1c0d8eda1dc140b netwib-5.6.0.ebuild 923
-MD5 3fa0928f07f3d6ffc0a71e0ec472d9ba netwib-5.9.0.ebuild 926
+MD5 2d7f3fb3329d8a03a2c9fe465f97fade netwib-5.6.0.ebuild 926
+MD5 743232fc25b816171608d3d099d1c2de netwib-5.9.0.ebuild 932
+MD5 793cddbc8da3a110e9207e1a629e730c netwib-5.28.0.ebuild 975
 MD5 209164506df28fd5c7618d5ed6a310f2 files/digest-netwib-5.6.0 65
 MD5 572674711661455a240f23e74446ea87 files/digest-netwib-5.9.0 65
+MD5 8491c5fb01637c29d04c5a7d351c4b20 files/digest-netwib-5.28.0 66
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.0 (GNU/Linux)
+
+iD8DBQFB5gUBmdTrptrqvGERAgaPAJ0ez/jQEJB7lwwsRNQUO0Vc8+dCYgCdF05f
+pykew9AsnP9bQRAgJyAkVxQ=
+=Djcr
+-----END PGP SIGNATURE-----
