@@ -1,6 +1,8 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/netwib/netwib-5.6.0.ebuild,v 1.8 2005/01/13 05:19:51 dragonheart Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/netwib/netwib-5.28.0.ebuild,v 1.1 2005/01/13 05:19:51 dragonheart Exp $
+
+inherit toolchain-funcs
 
 DESCRIPTION="Library of Ethernet, IP, UDP, TCP, ICMP, ARP and RARP protocols"
 HOMEPAGE="http://www.laurentconstantin.com/en/netw/netwib/"
@@ -8,7 +10,7 @@ SRC_URI="http://www.laurentconstantin.com/common/netw/netwib/download/v${PV/.*}/
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="x86"
+KEYWORDS="~x86 ~sparc"
 IUSE=""
 
 DEPEND="net-libs/libpcap
@@ -30,7 +32,7 @@ src_unpack() {
 
 src_compile() {
 	cd src
-	emake || die "compile problem"
+	emake CC=$(tc-getCC) || die "compile problem"
 }
 
 src_install() {
