@@ -1,6 +1,6 @@
-# Copyright 1999-2004 Gentoo Foundation
+# Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/netwib/netwib-5.9.0.ebuild,v 1.6 2004/11/20 04:25:05 weeve Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/netwib/netwib-5.9.0.ebuild,v 1.7 2005/01/13 05:19:51 dragonheart Exp $
 
 DESCRIPTION="Library of Ethernet, IP, UDP, TCP, ICMP, ARP and RARP protocols"
 HOMEPAGE="http://www.laurentconstantin.com/en/netw/netwib/"
