@@ -1,6 +1,11 @@
 # ChangeLog for net-libs/netwib
-# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/netwib/ChangeLog,v 1.10 2004/11/20 04:25:05 weeve Exp $
+# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-libs/netwib/ChangeLog,v 1.11 2005/01/13 05:19:51 dragonheart Exp $
+
+*netwib-5.28.0 (13 Jan 2005)
+
+  13 Jan 2005; Daniel Black <dragonheart@gentoo.org> +netwib-5.28.0.ebuild:
+  Version bump as per bug #75621 by Ovidiu Ghinet <oghinet@yahoo.com>
 
   19 Nov 2004; Jason Wever <weeve@gentoo.org> netwib-5.9.0.ebuild:
   Stable on sparc.
